<resources xmlns:xliff="urn:oasis:names:ts:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <!-- Header text for the list of toppings [CHAR LIMIT=20]-->
    <string name="toppings">Toppings</string>
    <string name="thank_you">Thank you!</string>
    <!--
    Name for the order summary. It will be shown in format of "Name: Amy" where Amy is the
    user's name. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="negative">-</string>
    <string name="order">Order</string>
    <string name="positive_side">+</string>
    <string name="_1">1</string>
    <string name="name">Name</string>
</resources>
